--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.2.15",
-    "ng-fastclick": "~1.0.2"
+    "ng-fastclick": "~1.0.2",
+    "angular-ui-router-tabs": "~2.0.0",
+    "d3": "^3.5.17"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
