--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-ui-router": "~0.2.15",
     "ng-fastclick": "~1.0.2",
     "angular-ui-router-tabs": "~2.0.0",
-    "d3": "^3.5.17"
+    "d3": "^3.5.17",
+    "angular-fullscreen": "^1.0.1",
+    "d3-tip": "^0.6.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
